--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,37 @@
     max-width: none;
   }
   
+
+/* heading------------------------- text-3xl md:text-4xl lg:text-6xl */
+/* sub heading ---------------------   text-base md:text-lg lg:text-xl */
+/* paragraph ------------------------------ text-xs md:text-sm lg:text-base */
+
+/* button */
+/* 
+
+  const [deviceSize, setDeviceSize] = React.useState('sm');
+
+  React.useEffect(() => {
+    function handleResize() {
+      if (window.innerWidth < 640) {
+        setDeviceSize('sm');
+      } else if (window.innerWidth >= 640 && window.innerWidth < 1024) {
+        setDeviceSize('md');
+      } else {
+        setDeviceSize('lg');
+      }
+    }
+
+    // Add the event listener
+    window.addEventListener('resize', handleResize);
+
+    // Call it once to set the initial size
+    handleResize();
+
+    // Remove the event listener when the component unmounts
+    return () => {
+      window.removeEventListener('resize', handleResize);
+    };
+  }, []); 
+  
+  */
